# iot-projects

./: README.md  boot.py  index.html
Arduino/Smart-bin-2025/: README.md  blink.ino  index.ino
ESP-32/Blink-eye-webserver/: ping.txt  platformio.ini
ESP-32/Blink-eye-webserver/data/: index.html
ESP-32/Blink-eye-webserver/src/: main.cpp
ESP-32/Esp32-Learning/src/: main.cpp
ESP-32/EspTemp/: README.md  platformio.ini  todo.md
ESP-32/EspTemp/data/: index.html
ESP-32/EspTemp/include/: index.html
ESP-32/EspTemp/src/: main.cpp
ESP-32/Telegram_bot/: .gitignore  README.md  platformio.ini  readme.md
ESP-32/Telegram_bot/include/: config.h
ESP-8266/WIfi-Car/: main.cpp
ESP-8266/fish-tank-smart-pump/: pump.cpp
ESP-8266/web-ctrl-servo/: main.py
Smart rover/: README.md  boot.py  index.html  light_system.py  main.py  motor_controller.py  safety_monitor.py  web_server.py
Smart rover_2.0/: README.md  parts_list.md
Smart rover_2.0/docs/: knowledge.md
Smart rover_2.0/firmware/: .gitignore  CMakeLists.txt  README.md  knowledge.md  partitions.csv  sdkconfig.defaults  starter.md
Smart rover_2.0/firmware/main/: CMakeLists.txt  Kconfig.projbuild  battery.cpp  battery.h  config.h  failsafe.cpp  failsafe.h  lights.cpp  lights.h  main.cpp  motor.cpp  motor.h  webserver.cpp  webserver.h
Smart rover_2.0/firmware/main/spiffs_data/: calibration.html  diagnostics.html  help.html  index.html  update.html
Smart rover_2.0/firmware/main/spiffs_data/css/: style.css
Smart rover_2.0/firmware/main/spiffs_data/js/: app.js  nipplejs.min.js
web-ctrl-servo/: boot.py
(+8 files in other folders)
